impr(IconsParser): parse skillswindow to locate necessary ui info